--- a/src/css/style.css
+++ b/src/css/style.css
@@ -117,7 +117,7 @@ button:hover {
 }
 
 .popup-content {
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgb(255, 255, 255);
   padding: 20px;
   border-radius: 10px;
   text-align: center;
@@ -140,8 +140,8 @@ button:hover {
   cursor: pointer;
 }
 
-video {
+iframe {
   width: 100%;
-  height: auto;
+  height: 315px;
   border-radius: 10px;
 }
